--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -62,7 +62,7 @@
         <!--Endsection 1-->
 
         <!--Section 2-->
-        <section 2>
+        <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -99,7 +99,7 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
-        </section 2>
+        </section>
         <!--Endsection 2-->
     </main>
     
