--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -64,6 +64,7 @@
         <!--Section 2-->
         <section>
             <h2>Our Team</h2>
+            <p>text</p>
             <ul>
                 <li>
                     <img src="./images/man-with-laptop-presenting-something.jpg" 
