--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Header-->
     <header>
         <nav>
-            <a href=”./index.html”>WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             
             <ul>
                 <li><a href="">Studio</a></li>
@@ -39,6 +39,7 @@
 
         <!--Section 1-->
         <section>
+            <h2>Features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -64,7 +65,6 @@
         <!--Section 2-->
         <section>
             <h2>Our Team</h2>
-            <p>text</p>
             <ul>
                 <li>
                     <img src="./images/man-with-laptop-presenting-something.jpg" 
@@ -106,7 +106,7 @@
     
     <!--Footer-->
     <footer>
-        <a href=”./index.html”>WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     <!--Endfooter-->
