--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/man-with-laptop-presenting-something.jpg" 
-                        alt="man-with-laptop-presenting-something" width="264" height="260">
+                    <img src="./images/mark-guerrero.jpg" 
+                        alt="mark-guerrero" width="264" height="260">
                     <h3>
                         Mark Guerrero
                     </h3>
@@ -76,24 +76,24 @@
 
                 </li>
                 <li>
-                    <img src="./images/img-2.jpg" 
-                        alt="img-2" width="264" height="260">
+                    <img src="./images/tom-ford.jpg" 
+                        alt="tom-ford" width="264" height="260">
                     <h3>
                         Tom Ford
                     </h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.jpg" 
-                        alt="young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair" width="264" height="260">
+                    <img src="./images/camila-garcia.jpg" 
+                        alt="camila-garcia" width="264" height="260">
                     <h3>
                         Camila Garcia
                     </h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/confident-handsome-guy-posing-against-white-wall.jpg" 
-                        alt="confident-handsome-guy-posing-against-white-wall" width="264" height="260">
+                    <img src="./images/daniel-wilson.jpg" 
+                        alt="daniel-wilson" width="264" height="260">
                     <h3>
                         Daniel Wilson
                     </h3>
